--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,10 +9,7 @@
     = csrf_meta_tags
     -# = yield(:head)
   %body
-    %header.navbar.navbar-fixed-top
-      %nav.navbar-inner
-        .container
-          -# = render 'layouts/navigation'
+    = render 'layouts/navigation'
     #main{:role => "main"}
       .container
         .content
