--- a/app/views/vending_machines/_form.html.haml
+++ b/app/views/vending_machines/_form.html.haml
@@ -1,10 +1,11 @@
-= simple_form_for(@vending_machine) do |f|
+= simple_form_for(@vending_machine, :html => { :class => 'form-horizontal' }) do |f|
   = f.error_notification
 
   .form-inputs
     = f.input :serial_number
-    = f.input :purchase_price
-    = f.input :age_verification
+    = f.input :purchase_price, :hint => "What was the original purchase price ?"
+    = f.input :age_verification, :as => :boolean
 
   .form-actions
-    = f.button :submit
+    = f.button :submit, class: "btn btn-primary"
+    = link_to "Cancel", :back, class: "btn"
