--- a/app/views/vending_machines/index.html.haml
+++ b/app/views/vending_machines/index.html.haml
@@ -1,23 +1,11 @@
-%h1 Listing vending_machines
+%h1 Vending machines
 
 %table
-  %tr
-    %th Serial number
-    %th Purchase price
-    %th Age verification
-    %th
-    %th
-    %th
-
   - @vending_machines.each do |vending_machine|
     %tr
-      %td= vending_machine.serial_number
-      %td= vending_machine.purchase_price
-      %td= vending_machine.age_verification
-      %td= link_to 'Show', vending_machine
-      %td= link_to 'Edit', edit_vending_machine_path(vending_machine)
-      %td= link_to 'Destroy', vending_machine, method: :delete, data: { confirm: 'Are you sure?' }
+      %td= link_to vending_machine.serial_number, vending_machine
+      %td= link_to 'Show', vending_machine_path(vending_machine), { class: "btn btn-mini" }
 
 %br
 
-= link_to 'New Vending machine', new_vending_machine_path
+= link_to 'New Vending machine', new_vending_machine_path, class: "btn btn-primary"
