--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,6 @@
         .content
           .row
             .span12
-              -# = render 'layouts/messages'
+              = render 'layouts/flash_messages'
               = yield
           %footer
