fix price display

--- a/app/views/vending_machines/_form.html.haml
+++ b/app/views/vending_machines/_form.html.haml
@@ -3,7 +3,8 @@
 
   .form-inputs
     = f.input :serial_number
-    = f.input :purchase_price, :hint => "What was the original purchase price ?"
+    = f.input :purchase_price, :input_html => { :value => pretty_price_format(@vending_machine.purchase_price) },
+      :hint => "What was the original purchase price ?"
     = f.input :age_verification, :as => :boolean
 
   .form-actions
