add 'navigation' role to nav bar

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -11,7 +11,7 @@
           %span.icon-bar
 
         .nav-collapse.collapse
-          %ul.nav
+          %ul.nav{ role: "navigation" }
             %li
               = link_to "Vending machines", vending_machines_path
             
