--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -13,5 +13,5 @@
         .nav-collapse.collapse
           %ul.nav{ role: "navigation" }
             %li
-              = link_to "Vending machines", vending_machines_path
+              = link_to VendingMachine.model_name.human.pluralize, vending_machines_path
             
