--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -10,8 +10,12 @@
           %span.icon-bar
           %span.icon-bar
 
-        .nav-collapse.collapse
-          %ul.nav{ role: "navigation" }
-            %li
-              = link_to VendingMachine.model_name.human.pluralize, vending_machines_path
+        - if user_signed_in?
+          .nav-collapse.collapse
+            %ul.nav{ role: "navigation" }
+              %li
+                = link_to VendingMachine.model_name.human.pluralize, vending_machines_path
+              
+            %p.navbar-text.pull-right
+              = link_to t('devise.sign_out'), destroy_user_session_path, method: :delete, class: "navbar-link"
             
