--- a/app/views/vending_machines/_form.html.haml
+++ b/app/views/vending_machines/_form.html.haml
@@ -2,7 +2,7 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :serial_number
+    = f.input :serial_number, :hint => t('vending_machines.serial_number_hint')
     = f.input :purchase_price, :input_html => { :value => pretty_price_format(@vending_machine.purchase_price) },
       :hint => t('vending_machines.purchase_price_hint')
     = f.input :age_verification, :as => :boolean
