--- a/app/views/partners/edit.html.haml
+++ b/app/views/partners/edit.html.haml
@@ -1,7 +1,3 @@
-%h1 Editing partner
+%h1= t('partners.editing')
 
 = render 'form'
-
-= link_to 'Show', @partner
-\|
-= link_to 'Back', partners_path
