allow end date to be blank

--- a/app/views/contracts/_form.html.haml
+++ b/app/views/contracts/_form.html.haml
@@ -3,7 +3,7 @@
 
   .form-inputs
     = f.input :start_date
-    = f.input :end_date
+    = f.input :end_date, :as => :date, :include_blank => true
     = f.input :vending_machine_id
     = f.input :partner_id
 
