--- a/app/assets/stylesheets/contracts.css.scss
+++ b/app/assets/stylesheets/contracts.css.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the contracts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+table.contracts th, table.contracts td {
+  padding: 5px;
+}
