--- a/app/views/contracts/edit.html.haml
+++ b/app/views/contracts/edit.html.haml
@@ -1,7 +1,3 @@
-%h1 Editing contract
+%h1= t('contracts.editing')
 
 = render 'form'
-
-= link_to 'Show', @contract
-\|
-= link_to 'Back', contracts_path
