--- a/app/views/contracts/index.html.haml
+++ b/app/views/contracts/index.html.haml
@@ -1,25 +1,27 @@
-%h1 Listing contracts
+%h1
+  = Contract.model_name.human.pluralize
+  = link_to new_contract_path, class: "btn btn-primary" do
+    <i class="icon-plus icon-white"></i>
+    = t('Create')
 
-%table
-  %tr
-    %th Start date
-    %th End date
-    %th Vending machine
-    %th Partner
-    %th
-    %th
-    %th
-
-  - @contracts.each do |contract|
+- if @contracts.size > 0
+  %table.contracts
     %tr
-      %td= contract.start_date
-      %td= contract.end_date
-      %td= contract.vending_machine_id
-      %td= contract.partner_id
-      %td= link_to 'Show', contract
-      %td= link_to 'Edit', edit_contract_path(contract)
-      %td= link_to 'Destroy', contract, method: :delete, data: { confirm: 'Are you sure?' }
+      %th= Partner.model_name.human
+      %th= VendingMachine.model_name.human
+      %th= Contract.human_attribute_name('start_date')
+      %th= Contract.human_attribute_name('end_date')
+      %th
+    - @contracts.each do |contract|
+      %tr
+        %td= contract.partner.name
+        %td= contract.vending_machine.serial_number
+        %td= l(contract.start_date)
+        %td= l(contract.end_date) if contract.end_date
+        %td= link_to t('Show'), contract_path(contract), { class: "btn btn-mini" }
+- else
+  .alert.alert-info
+    %button.close{ "data-dismiss" => "alert" }
+      ×
 
-%br
-
-= link_to 'New Contract', new_contract_path
+    = t('contracts.none_to_display')
