--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -15,6 +15,7 @@
             %ul.nav{ role: "navigation" }
               %li= link_to VendingMachine.model_name.human.pluralize, vending_machines_path
               %li= link_to Partner.model_name.human.pluralize, partners_path
+              %li= link_to Contract.model_name.human.pluralize, contracts_path
               
             %p.navbar-text.pull-right
               = link_to t('devise.sign_out'), destroy_user_session_path, method: :delete, class: "navbar-link"
